<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_Item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:elevation="10dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTintMode="screen">

            <ImageView

                android:id="@+id/item_img"
                android:layout_width="70dp"
                android:layout_height="120dp"
                android:contentDescription="Brick image"
                android:scaleType="centerCrop"
                android:src="@drawable/brick_placeholder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/inventory_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="4dp"
                android:text="Plate Special 1 x 1 Rounded with Handle"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/item_img"
                app:layout_constraintTop_toTopOf="@id/item_img" />

            <TextView
                android:id="@+id/inventory_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="#26047"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/inventory_title"
                app:layout_constraintTop_toBottomOf="@+id/inventory_title" />

            <Button
                android:id="@+id/inventory_remove"
                android:layout_width="50dp"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="5dp"
                android:includeFontPadding="false"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="-"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="30sp"
                android:textStyle="bold"
                app:iconGravity="textEnd"
                app:iconPadding="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/inventory_destroy"
                app:layout_constraintTop_toBottomOf="@+id/inventory_title"
                tools:text="-" />

            <Button
                android:id="@+id/inventory_add"
                android:layout_width="50dp"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:includeFontPadding="false"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="+"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="30sp"
                android:textStyle="bold"
                app:iconGravity="textEnd"
                app:iconPadding="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/inventory_remove"
                app:layout_constraintTop_toBottomOf="@+id/inventory_title"
                tools:text="+" />

            <Button
                android:id="@+id/inventory_destroy"
                android:layout_width="50dp"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="#D30F0F"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:icon="@android:drawable/ic_delete"
                app:iconGravity="textEnd"
                app:iconPadding="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inventory_title" />

            <TextView
                android:id="@+id/inventory_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="9dp"
                android:layout_marginBottom="5dp"
                android:text="-1"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/inventory_add"
                app:layout_constraintStart_toEndOf="@+id/inventory_id"
                app:layout_constraintTop_toBottomOf="@+id/inventory_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>