<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/FavoriteFragment"
        android:enabled="true"
        android:icon="@drawable/baseline_star_24"
        android:title="@string/favorite_option"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/SearchFragment"
        android:enabled="true"
        android:icon="@drawable/baseline_image_search_24"
        android:title="@string/search_option"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/InventoryFragment"
        android:enabled="true"
        android:icon="@drawable/baseline_archive_24"
        android:title="@string/inventory_option"
        app:showAsAction="ifRoom" />

</menu>